[package]
name = "push2_pong"
version = "0.2.1"
authors = ["Marc Bracher"]
edition = "2018"
description="Ableton Push2 Embedded-graphics display driver"
license="MIT OR Apache-2.0"
readme = "./README.md"
keywords = ["embedded-graphics", "graphics", "embedded", "push2", "MIDI"]
repository = "https://github.com/mbracher/push2_pong"

[dependencies]
midir = "0.7.0"
anyhow = "1.0.36"
thiserror = "1.0.22"
gameloop = "0.2.0"
push2_display = { version = "0.2.0", path = "../push2_display" }
embedded-graphics = "0.7.1"